nav in phone rudimentary looking good.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,59 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0; }
+
+a {
+  text-decoration: none;
+  color: initial; }
+
+html {
+  font-size: 62.5%; }
+
+body {
+  font-size: 1.8rem; }
+
+.body-text {
+  font-family: 'Barlow', sans-serif;
+  font-weight: 600; }
+
+.nav-bar__logo {
+  font-family: 'Barlow', sans-serif;
+  font-weight: 800; }
+
+.nav-bar {
+  transition: all 0.5s ease-in-out;
+  position: relative;
+  background-color: #3dbeff;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  fill: white;
+  padding: 2rem; }
+  @media (max-width: 450px) {
+    .nav-bar .nav-bar__nav {
+      display: none; }
+    .nav-bar.show-menu {
+      padding-bottom: 33rem; }
+      .nav-bar.show-menu .nav-bar__nav {
+        display: block;
+        position: absolute;
+        width: calc(100% - 4rem);
+        left: 0;
+        bottom: 1rem;
+        background-color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        row-gap: 4rem;
+        padding: 4rem 8rem;
+        padding-top: 6rem;
+        margin: 0 2rem;
+        clip-path: polygon(0% 10%, 90% 10%, 100% 0%, 100% 100%, 0% 100%); } }
+
 .column {
   display: block;
   flex-basis: 0;
@@ -1125,16 +1181,3 @@
   @media screen and (min-width: 1408px) {
     .columns.is-variable.is-8-fullhd {
       --columnGap: 2rem; } }
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  font-size: 1.8rem; }
