--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,3 +4,13 @@ html{
 body{
     font-size: 1.8rem;
 }
+
+.body-text{
+    font-family: 'Barlow', sans-serif;
+    font-weight: 600;
+}
+
+.nav-bar__logo{
+    font-family: 'Barlow', sans-serif;
+    font-weight: 800;
+}
