--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,3 @@
-@import './vendor/bulma/_columns.sass';
-
 @import './abstracts/mixins';
 
 @import './base/reset';
@@ -7,3 +5,7 @@
 @import './base/variables';
 
 @import './pages/landing-page';
+
+@import './components/nav-bar';
+
+@import './vendor/bulma/_columns.sass';
