--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -2,6 +2,8 @@ $color-red: hsl(7, 99%, 70%);
 $color-yellow: hsl(51, 100%, 49%);
 $color-blue: hsl(198, 62%, 26%);
 
+$color-light-blue: #3dbeff;
+
 $color-cyan-1: hsl(167, 40%, 24%);
 $color-cyan-2: hsl(168, 34%, 41%);
 
