--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -1,6 +1,6 @@
 .nav-bar{
     transition: all 0.5s ease-in-out;
-    position: relative;
+    position: sticky;
     background-color: $color-light-blue;
     display: flex;
     justify-content: space-between;
@@ -22,7 +22,7 @@
         }
 
         &__nav{
-            color: white;
+            color: $color-white-1;
             display: flex;
             column-gap: 4rem;
             font-size: 1.8rem;
@@ -45,16 +45,21 @@
             display: none;
         }
 
+        &__hamburger-icon{
+            margin: auto 0;
+        }
+
         &.show-menu{
             padding-bottom: 33rem;
             .nav-bar__nav{
                 display: block;
                 position: absolute;
-                 width: calc(100% - 4rem);
-                 left: 0;
-                 bottom: 1rem;
-        
-                background-color: white;
+                width: calc(100% - 4rem);
+                left: 0;
+                bottom: 1rem;
+                
+                color: $color-black-1;
+                background-color: $color-white-1;
                 
                 display: flex;
                 flex-direction: column;
