--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,11 @@ body {
       font-size: 1.8rem;
       letter-spacing: 0.13rem;
       justify-content: center;
-      align-items: center; }
+      align-items: center; } }
+  @media (min-width: 451px) and (max-width: 1000px) {
+    .nav-bar__nav {
+      column-gap: 2rem; } }
+  @media (min-width: 451px) {
       .nav-bar__nav a:last-child {
         font-size: 1.8rem;
         font-family: 'Fraunces', serif;
