--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -25,6 +25,9 @@
             color: $color-white-1;
             display: flex;
             column-gap: 4rem;
+            @include for-tablet-and-lower{
+                column-gap: 2rem;
+            }
             font-size: 1.8rem;
             letter-spacing: 0.13rem;
             justify-content: center;
