--- a/sass/components/_nav-bar.scss
+++ b/sass/components/_nav-bar.scss
@@ -1,6 +1,9 @@
 .nav-bar{
+    z-index: 1000;
+    
     transition: all 0.5s ease-in-out;
-    position: sticky;
+    position: fixed;
+    width: 100vw;
     background-color: $color-light-blue;
     display: flex;
     justify-content: space-between;
