--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,4 @@
 @import './components/nav-bar';
 @import './components/text-component.scss';
 @import './components/image';
+@import './components/show-component';
