--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -6,7 +6,26 @@
     margin: 0;
 }
 
-a{
+a:link,a:visited{
+    display: inline-block;
+    position: relative;
     text-decoration: none;
     color: inherit;
+    
+    &::after{
+        transition: all 0.2s;
+        position: absolute;
+        content: '';
+        width: 0%;
+        background-color: rgba($color-yellow,0.6);
+        left: 0;
+        bottom: 2px;
+        height: 5px;
+        border-radius: 25%;
+
+        z-index: -1;
+    }
+}
+a:hover::after{
+    width: 100%;
 }
