--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,8 @@
 @import './abstracts/mixins';
 
+@import './base/variables';
 @import './base/reset';
 @import './base/typography';
-@import './base/variables';
 @import './base/utility';
 
 @import './layout/columns';
@@ -13,3 +13,4 @@
 @import './components/text-component.scss';
 @import './components/image';
 @import './components/show-component';
+@import './components/testimonial-box.scss';
