--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -17,10 +17,36 @@ body{
     @include for-mobile-only{
         text-align: center;
     }
+}
 
-    &--small{
-        font-size: 2rem
+.h3{
+    font-family: 'Fraunces', serif;
+    font-size: 2rem;
+    color: $color-black-1;
+
+    &--center-text{
+        text-align: center;
     }
+
+    @include for-mobile-only{
+        text-align: center;
+    }
+}
+
+.testimonials-heading{
+    font-family: 'Fraunces', serif;
+    font-size: 2rem;
+    color: rgba($color-black-1, 0.6);
+    text-transform: uppercase;
+    letter-spacing: 1.5rem;
+    text-align: center;
+}
+
+.h4{
+    font-family: 'Barlow', sans-serif;
+    font-weight: 600;
+    font-size: 1.6rem;
+    color: rgba($color-black-1, 0.6);
 }
 
 .body-text{
