--- a/sass/base/_utility.scss
+++ b/sass/base/_utility.scss
@@ -2,6 +2,10 @@
     margin-bottom: 3rem;
 }
 
+.u-margin-top-small{
+    margin-top: 1rem;
+}
+
 .one-two-ordering{
     & > *:first-child{
         order: 1;
