--- a/sass/components/_testimonial-box.scss
+++ b/sass/components/_testimonial-box.scss
@@ -1,5 +1,17 @@
 .testimonial-box{
     display: flex;
     flex-direction: column;
+    align-items: center;
     row-gap: 3rem;
+
+    &__image{
+        width: 6.4rem;
+        border-radius: 100%;
+    }
+
+    &__credentials{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
