--- a/sass/base/_utility.scss
+++ b/sass/base/_utility.scss
@@ -1,5 +1,15 @@
+.u-margin-top-big{
+    margin-top: 3rem;
+}
 .u-margin-bottom-big{
     margin-bottom: 3rem;
+}
+
+.u-margin-top-large{
+    margin-top: 7rem;
+}
+.u-margin-bottom-large{
+    margin-bottom: 7rem;
 }
 
 .u-margin-top-small{
