--- a/sass/components/_testimonial-box.scss
+++ b/sass/components/_testimonial-box.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     row-gap: 3rem;
+    text-align: center;
 
     &__image{
         width: 6.4rem;
