--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -51,7 +51,8 @@ body{
 
 .body-text{
     font-family: 'Barlow', sans-serif;
-    font-weight: 400;
+    font-weight: 600;
+    color: rgba($color-black-1, 0.5);
     letter-spacing: 0.25rem; 
     line-height: 150%;
 
