--- a/sass/pages/_landing-page.scss
+++ b/sass/pages/_landing-page.scss
@@ -33,6 +33,9 @@ section.hero{
 
 section.testimonials-section{
     padding: 5rem 15rem 15rem 15rem;
+    @include for-tablet-and-lower{
+        padding: 3rem;
+    }
     .testimonials{
         display: flex;
         column-gap: 3rem;
@@ -57,6 +60,37 @@ section.testimonials-section{
         img{
             width: 50%;
             object-fit: contain;
+        }
+    }
+}
+
+footer{
+    padding: 10rem;
+    background-color: $color-cyan-2;
+    color: $color-cyan-1;
+    // font-weight: 600;
+    @include for-mobile-only{
+        padding: 7rem;
+    }
+
+    text-align: center;
+
+    ul{
+        list-style-type: none;
+        display: flex;
+        column-gap: 2rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .icon-box{
+        margin-top: 7rem;
+        display: flex;
+        justify-content: center;
+        column-gap: 8rem;
+
+        @include for-mobile-only{
+            column-gap: 4rem;
         }
     }
 }
