--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,12 @@
   padding: 0;
   margin: 0; }
 
-a:link, a:visited {
+.a:link, .a:visited {
   display: inline-block;
   position: relative;
   text-decoration: none;
   color: inherit; }
-  a:link::after, a:visited::after {
+  .a:link::after, .a:visited::after {
     transition: all 0.2s;
     position: absolute;
     content: '';
@@ -22,7 +22,7 @@ a:link, a:visited {
     border-radius: 25%;
     z-index: -1; }
 
-a:hover::after {
+.a:hover::after {
   width: 100%; }
 
 html {
@@ -230,11 +230,20 @@ footer {
       column-gap: 2rem; } }
   @media (min-width: 451px) {
       .nav-bar__nav a:last-child {
+        text-decoration: none;
+        color: inherit;
+        transition: all 0.3s ease-in-out;
         font-size: 1.8rem;
         font-family: 'Fraunces', serif;
         padding: 2rem 3rem;
         background-color: rgba(255, 255, 255, 0.3);
-        border-radius: 30px; } }
+        border-radius: 30px; }
+      .nav-bar__nav a:last-child:hover {
+        box-shadow: 0 1rem 2rem rgba(35, 48, 62, 0.15);
+        transform: translateY(-2px) scale(1.03); }
+      .nav-bar__nav a:last-child:active {
+        box-shadow: 0 0.5rem 1rem rgba(35, 48, 62, 0.15);
+        transform: translateY(0px); } }
   @media (max-width: 450px) {
     .nav-bar .nav-bar__nav {
       display: none; }
