--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -6,7 +6,7 @@
     margin: 0;
 }
 
-a:link,a:visited{
+.a:link,.a:visited{
     display: inline-block;
     position: relative;
     text-decoration: none;
@@ -26,6 +26,6 @@ a:link,a:visited{
         z-index: -1;
     }
 }
-a:hover::after{
+.a:hover::after{
     width: 100%;
 }
